// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiled template should create agreementmark from a template and data 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.ciceromark@0.6.0.Contract",
      "name": "top",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "1",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Welcome!",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Hello ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "name": "firstName",
              "value": "\\"Dan\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": " ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Tenzin-Isaac-Mia",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": " ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
              "isTrue": true,
              "name": "lastName",
              "whenFalse": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Dude",
                },
              ],
              "whenTrue": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Mister",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "!",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Middle Names",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "name": "this",
                  "value": "\\"Tenzin\\"",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "name": "this",
                  "value": "\\"Isaac\\"",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "name": "this",
                  "value": "\\"Mia\\"",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Address",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark@0.6.0.Clause",
          "name": "address",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.List",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "nodes": Array [],
                          "text": "Street: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "name": "street",
                          "value": "\\"1 Main Street\\"",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "nodes": Array [],
                          "text": "City: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "name": "city",
                          "value": "\\"Boston\\"",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "nodes": Array [],
                          "text": "ZIP: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "name": "zip",
                          "value": "\\"12345\\"",
                        },
                      ],
                    },
                  ],
                },
              ],
              "tight": "true",
              "type": "bullet",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Your city is: ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Emph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "city",
                      "value": "\\"Boston\\"",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": ".",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Account Status",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
              "isTrue": false,
              "name": "active",
              "whenFalse": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your account has been deactivated.",
                },
              ],
              "whenTrue": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your account is active.",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Thank you for visiting us ",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                      "code": " return now.diff(lastVisit,'day') ",
                      "dependencies": Array [],
                      "name": "formula_53113a901ca88208df47bc83374866e8d497d84099c0f88123c918ff1960b17e",
                      "value": "66",
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": " days ago.",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Linebreak",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Your last visit was: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.FormattedVariable",
                  "format": "MM/DD/YYYY",
                  "name": "lastVisit",
                  "value": "01/10/2023",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": ".",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Formula",
              "code": "
// test we can use typescript!
const addressBook:Map<string,string> = new Map<string,string>();
addressBook.set('123', 'Dan Selman');
addressBook.set('234', 'Isaac Selman');
addressBook.set('456', 'Tenzin Selman');
addressBook.set('789', 'Mi-a Selman');
let result = '';
addressBook.forEach((value, key) => {
   result += \`[\${key} : \${value}]\`;
});
return result;
",
              "dependencies": Array [],
              "name": "formula_7841bd178366af21ea233d10968eaf538d12fb7a50cbaf9cbe1b51a00cb0f6a8",
              "value": "\\"[123 : Dan Selman][234 : Isaac Selman][456 : Tenzin Selman][789 : Mi-a Selman]\\"",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Orders",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "sku",
                      "value": "\\"WIDGET-2000\\"",
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": " : ",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Emph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "amount",
                      "value": "10",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "sku",
                      "value": "\\"DOODAH-X\\"",
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": " : ",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Emph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "amount",
                      "value": "3",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "You do not have a loyalty status.",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Optional",
              "hasSome": false,
              "name": "loyaltyStatus",
              "whenNone": Object {
                "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                "nodes": Array [
                  Object {
                    "$class": "org.accordproject.commonmark@0.5.0.Text",
                    "nodes": Array [],
                    "text": "You do not have a loyalty status.",
                  },
                ],
              },
              "whenSome": Object {
                "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                "nodes": Array [
                  Object {
                    "$class": "org.accordproject.commonmark@0.5.0.Text",
                    "nodes": Array [],
                    "text": "You do not have a loyalty status.",
                  },
                ],
              },
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark@0.6.0.Clause",
          "name": "preferences",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Heading",
              "level": "2",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Favorite Colors",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Your favorite colors are: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " return preferences.favoriteColors !== undefined ? preferences.favoriteColors.join(' and ') : 'No favorite colors!' ",
                  "dependencies": Array [],
                  "name": "formula_4b8f7e95470eda90057c4648aac4e4c7abb3f93559ed348246b6a15ec1fea473",
                  "value": "\\"RED and PINK\\"",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Image",
                  "destination": "https://www.litmus.com/wp-content/uploads/2021/02/motion-tween-example.gif",
                  "title": "",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "this",
                      "value": "\\"RED\\"",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "this",
                      "value": "\\"PINK\\"",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.List",
              "tight": "true",
              "type": "bullet",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
                  "isTrue": true,
                  "name": "favoriteColors",
                  "whenFalse": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Why don't you like PINK!",
                    },
                  ],
                  "whenTrue": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "You like pink!",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Dynamic Query of Clauses",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Onboarding Clauses",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.category==\\"onboarding\\")]\`);
",
                  "dependencies": Array [],
                  "name": "formula_a8a1d7714d95baa82f730e0105d2f2d0a9fc25ee9b6055058cc09667c01c01ab",
                  "value": "[{\\"category\\":\\"onboarding\\",\\"author\\":\\"Peter\\",\\"body\\":\\"Legal stuff\\",\\"risk\\":2.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Authored by ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "name": "firstName",
              "value": "\\"Dan\\"",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.author==\\"\${firstName}\\")]\`);
",
                  "dependencies": Array [],
                  "name": "formula_daca9cb2f5bc16b65f544e6f408c1e3121d50a3251ec4fbe2f27132818acc3d2",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Dad jokes\\",\\"risk\\":8.95},{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Programming for fun and profit\\",\\"risk\\":1.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "High Risk",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.risk>4)]\`);
",
                  "dependencies": Array [],
                  "name": "formula_4c874b2977b5eef204e4987efc0a5594c7cce66403e54c17daa1e1c721d755a0",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Dad jokes\\",\\"risk\\":8.95},{\\"category\\":\\"offboarding\\",\\"author\\":\\"Matt\\",\\"body\\":\\"All goodness\\",\\"risk\\":4.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Low Risk and authored by ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "name": "firstName",
              "value": "\\"Dan\\"",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.risk<3 && @.author==\\"\${firstName}\\")]\`);
",
                  "dependencies": Array [],
                  "name": "formula_646a6cadec2125e4fd9e4b756aac72bc618b528967f04d325b28a817774441dd",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Programming for fun and profit\\",\\"risk\\":1.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Done.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "org.accordproject.commonmark@0.5.0",
}
`;

exports[`compiled template should create agreementmark from a template and data 2`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.ciceromark@0.6.0.Contract",
      "name": "top",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "1",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Welcome!",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Hello ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "name": "firstName",
              "value": "\\"Dan\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": " ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Tenzin-Isaac-Mia",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": " ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
              "isTrue": true,
              "name": "lastName",
              "whenFalse": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Dude",
                },
              ],
              "whenTrue": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Mister",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "!",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Middle Names",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "name": "this",
                  "value": "\\"Tenzin\\"",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "name": "this",
                  "value": "\\"Isaac\\"",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "name": "this",
                  "value": "\\"Mia\\"",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Address",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark@0.6.0.Clause",
          "name": "address",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.List",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "nodes": Array [],
                          "text": "Street: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "name": "street",
                          "value": "\\"1 Main Street\\"",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "nodes": Array [],
                          "text": "City: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "name": "city",
                          "value": "\\"Boston\\"",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "nodes": Array [],
                          "text": "ZIP: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "name": "zip",
                          "value": "\\"12345\\"",
                        },
                      ],
                    },
                  ],
                },
              ],
              "tight": "true",
              "type": "bullet",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Your city is: ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Emph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "city",
                      "value": "\\"Boston\\"",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": ".",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Account Status",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
              "isTrue": false,
              "name": "active",
              "whenFalse": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your account has been deactivated.",
                },
              ],
              "whenTrue": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your account is active.",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Thank you for visiting us ",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                      "code": " return now.diff(lastVisit,'day') ",
                      "dependencies": Array [],
                      "name": "formula_53113a901ca88208df47bc83374866e8d497d84099c0f88123c918ff1960b17e",
                      "value": "66",
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": " days ago.",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Linebreak",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Your last visit was: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.FormattedVariable",
                  "format": "MM/DD/YYYY",
                  "name": "lastVisit",
                  "value": "01/10/2023",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": ".",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Formula",
              "code": "
// test we can use typescript!
const addressBook:Map<string,string> = new Map<string,string>();
addressBook.set('123', 'Dan Selman');
addressBook.set('234', 'Isaac Selman');
addressBook.set('456', 'Tenzin Selman');
addressBook.set('789', 'Mi-a Selman');
let result = '';
addressBook.forEach((value, key) => {
   result += \`[\${key} : \${value}]\`;
});
return result;
",
              "dependencies": Array [],
              "name": "formula_7841bd178366af21ea233d10968eaf538d12fb7a50cbaf9cbe1b51a00cb0f6a8",
              "value": "\\"[123 : Dan Selman][234 : Isaac Selman][456 : Tenzin Selman][789 : Mi-a Selman]\\"",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Orders",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "sku",
                      "value": "\\"WIDGET-2000\\"",
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": " : ",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Emph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "amount",
                      "value": "10",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "sku",
                      "value": "\\"DOODAH-X\\"",
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": " : ",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Emph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "amount",
                      "value": "3",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Your loyalty status: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "name": "level",
                  "value": "\\"Gold\\"",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Optional",
              "hasSome": true,
              "name": "loyaltyStatus",
              "whenNone": Object {
                "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                "nodes": Array [
                  Object {
                    "$class": "org.accordproject.commonmark@0.5.0.Text",
                    "nodes": Array [],
                    "text": "Your loyalty status: ",
                  },
                  Object {
                    "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                    "name": "level",
                    "value": "\\"Gold\\"",
                  },
                ],
              },
              "whenSome": Object {
                "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                "nodes": Array [
                  Object {
                    "$class": "org.accordproject.commonmark@0.5.0.Text",
                    "nodes": Array [],
                    "text": "Your loyalty status: ",
                  },
                  Object {
                    "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                    "name": "level",
                    "value": "\\"Gold\\"",
                  },
                ],
              },
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark@0.6.0.Clause",
          "name": "preferences",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Heading",
              "level": "2",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Favorite Colors",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "nodes": Array [],
                  "text": "Your favorite colors are: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " return preferences.favoriteColors !== undefined ? preferences.favoriteColors.join(' and ') : 'No favorite colors!' ",
                  "dependencies": Array [],
                  "name": "formula_4b8f7e95470eda90057c4648aac4e4c7abb3f93559ed348246b6a15ec1fea473",
                  "value": "\\"RED and PINK\\"",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Image",
                  "destination": "https://www.litmus.com/wp-content/uploads/2021/02/motion-tween-example.gif",
                  "title": "",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "this",
                      "value": "\\"RED\\"",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "name": "this",
                      "value": "\\"PINK\\"",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.List",
              "tight": "true",
              "type": "bullet",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
                  "isTrue": true,
                  "name": "favoriteColors",
                  "whenFalse": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Why don't you like PINK!",
                    },
                  ],
                  "whenTrue": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "You like pink!",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Dynamic Query of Clauses",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Onboarding Clauses",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.category==\\"onboarding\\")]\`);
",
                  "dependencies": Array [],
                  "name": "formula_a8a1d7714d95baa82f730e0105d2f2d0a9fc25ee9b6055058cc09667c01c01ab",
                  "value": "[{\\"category\\":\\"onboarding\\",\\"author\\":\\"Peter\\",\\"body\\":\\"Legal stuff\\",\\"risk\\":2.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Authored by ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "name": "firstName",
              "value": "\\"Dan\\"",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.author==\\"\${firstName}\\")]\`);
",
                  "dependencies": Array [],
                  "name": "formula_daca9cb2f5bc16b65f544e6f408c1e3121d50a3251ec4fbe2f27132818acc3d2",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Dad jokes\\",\\"risk\\":8.95},{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Programming for fun and profit\\",\\"risk\\":1.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "High Risk",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.risk>4)]\`);
",
                  "dependencies": Array [],
                  "name": "formula_4c874b2977b5eef204e4987efc0a5594c7cce66403e54c17daa1e1c721d755a0",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Dad jokes\\",\\"risk\\":8.95},{\\"category\\":\\"offboarding\\",\\"author\\":\\"Matt\\",\\"body\\":\\"All goodness\\",\\"risk\\":4.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Low Risk and authored by ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "name": "firstName",
              "value": "\\"Dan\\"",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "code": " 
    return jp.query(library, \`$.clauses[?(@.risk<3 && @.author==\\"\${firstName}\\")]\`);
",
                  "dependencies": Array [],
                  "name": "formula_646a6cadec2125e4fd9e4b756aac72bc618b528967f04d325b28a817774441dd",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Programming for fun and profit\\",\\"risk\\":1.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "nodes": Array [],
              "text": "Done.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "org.accordproject.commonmark@0.5.0",
}
`;
